adjusting skills spacing and fixed word wrapping issue

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3322,17 +3322,21 @@ input, select, textarea {
 	.skills-flexbox {
 		display: flex;
 		flex-wrap: wrap;
-		gap: 20px;
+		gap: 24px;
 		justify-content: center;
 	}
 
 	.skill-label {
+		display: flex;
 		text-align: center;
 		margin-bottom: 5px;
 		display: flex;
 		flex-wrap: wrap;
 		width: 130px;
 		justify-content: center;
+		align-items: center;
+		line-height: 20px;
+		height: 42px;
 	}
 
 	.skill-img {
